--- a/Source Code/src/app/main-body/comment-display/comment-box/comment-box.component.html
+++ b/Source Code/src/app/main-body/comment-display/comment-box/comment-box.component.html
@@ -1,10 +1,10 @@
 <div class="comment" [ngStyle]="style" *ngIf="comment">
     <div class="comment_info" (click)="goToUserProfile()">
         <ng-template [ngIf]="useDefault" [ngIfElse]="hasImage">
-            <img src="assets/UI Icons/recurve.png" id="profile_pic">
+            <img src="assets/UI Icons/recurve.png" class="comment_avatar">
         </ng-template>
         <ng-template #hasImage>
-            <img src="assets/images/avatars/{{comment.poster.icon}}" id="profile_pic" (error)="swapDefault()">
+            <img src="assets/images/avatars/{{comment.poster.icon}}" class="comment_avatar" (error)="swapDefault()">
         </ng-template>
 
         <div class="comment_author">{{comment.poster.name}}</div>
